--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,6 +27,8 @@ html {
 }
 
 body {
+    background-color: $very-light-gray;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -51,6 +53,7 @@ main {
 
     font-size: $fs;
     line-height: $lh;
+    color: $very-dark-blue;
 }
 
 @mixin subtitle($fs, $lh, $ls) {
@@ -60,12 +63,12 @@ main {
     font-size: $fs;
     line-height: $lh;
     letter-spacing: $ls;
-
+    color: $very-dark-blue;
 }
 
 .title-container {
     max-width: 540px;
-    
+
     text-align: center;
 
     .title {
@@ -96,7 +99,7 @@ main {
     padding: 27px 28px 28px;
     max-width: 311px;
     border-radius: 8px;
-    box-shadow: 0px 15px 30px -11px #83a6d280;
+    box-shadow: 0px 15px 30px -11px $grayish-blue;
     border-top-width: 3.55px;
     border-top-style: solid;
 
@@ -152,6 +155,8 @@ footer {
     padding: 10px 12px;
     width: 100%;
     border-top: 3px solid $cyan;
+    box-shadow: 0px 15px 30px -11px $grayish-blue;
+    background-color: $white;
 
     display: flex;
     justify-content: center;
@@ -181,7 +186,7 @@ footer {
 
 @media only screen and (min-width: 648px) {
     .attribution {
-        border-radius: 0 10px 0 0;
+        border-radius: 0 10px 10px 0;
         width: max-content;
     }
 }
@@ -200,8 +205,6 @@ footer {
     }
 
     .card {
-        width: 311px;
-
         &.supervisor {
             grid-area: supervisor;
         }
@@ -240,7 +243,6 @@ footer {
     .card {
         padding: 32px;
         max-width: 350px;
-        border-radius: 8px;
         box-shadow: 0px 15px 30px -11px #83a6d280;
         border-top-width: 4px;
 
