--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@ html {
 }
 
 body {
+  background-color: #fafafa;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -39,6 +40,7 @@ main {
   font-weight: 600;
   font-size: 24px;
   line-height: 36px;
+  color: #4D4F62;
   letter-spacing: 0.166667px;
 }
 .title-container .title span {
@@ -50,6 +52,7 @@ main {
   font-size: 15px;
   line-height: 25px;
   letter-spacing: 0.104167px;
+  color: #4D4F62;
   margin-top: 16px;
 }
 
@@ -66,7 +69,7 @@ main {
   padding: 27px 28px 28px;
   max-width: 311px;
   border-radius: 8px;
-  box-shadow: 0px 15px 30px -11px #83a6d280;
+  box-shadow: 0px 15px 30px -11px #a3a5ae;
   border-top-width: 3.55px;
   border-top-style: solid;
   display: flex;
@@ -78,6 +81,7 @@ main {
   font-weight: 600;
   font-size: 20px;
   line-height: 30px;
+  color: #4D4F62;
 }
 .card .subtitle {
   font-weight: 400;
@@ -85,6 +89,7 @@ main {
   font-size: 13px;
   line-height: 23px;
   letter-spacing: 0.0902778px;
+  color: #4D4F62;
 }
 .card img {
   width: 57px;
@@ -116,6 +121,8 @@ footer {
   padding: 10px 12px;
   width: 100%;
   border-top: 3px solid #44D3D2;
+  box-shadow: 0px 15px 30px -11px #a3a5ae;
+  background-color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,7 +148,7 @@ footer {
 
 @media only screen and (min-width: 648px) {
   .attribution {
-    border-radius: 0 10px 0 0;
+    border-radius: 0 10px 10px 0;
     width: max-content;
   }
 }
@@ -155,9 +162,6 @@ footer {
     grid-template-areas: ". team-builder ." "supervisor team-builder calculator" "supervisor karma calculator" ". karma .";
   }
 
-  .card {
-    width: 311px;
-  }
   .card.supervisor {
     grid-area: supervisor;
   }
@@ -181,6 +185,7 @@ footer {
     font-weight: 600;
     font-size: 36px;
     line-height: 54px;
+    color: #4D4F62;
     letter-spacing: 0.25px;
   }
 
@@ -191,7 +196,6 @@ footer {
   .card {
     padding: 32px;
     max-width: 350px;
-    border-radius: 8px;
     box-shadow: 0px 15px 30px -11px #83a6d280;
     border-top-width: 4px;
     display: flex;
