--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -102,6 +102,7 @@ main {
     box-shadow: 0px 15px 30px -11px $grayish-blue;
     border-top-width: 3.55px;
     border-top-style: solid;
+    background-color: $white;
 
 
     display: flex;
