--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,7 @@ main {
   box-shadow: 0px 15px 30px -11px #a3a5ae;
   border-top-width: 3.55px;
   border-top-style: solid;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: column;
   gap: 33px;
