--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,8 +42,9 @@ main {
   color: #4D4F62;
   letter-spacing: 0.166667px;
 }
-.title-container .title span {
+.title-container .title.li {
   font-weight: 275;
+  margin-bottom: 1px;
 }
 .title-container .subtitle {
   font-weight: 400;
@@ -185,6 +186,9 @@ footer {
     line-height: 54px;
     color: #4D4F62;
     letter-spacing: 0.25px;
+  }
+  .title-container .title.li {
+    margin-bottom: -3px;
   }
 
   .cards-container {
